# ModernDLL

./: README.md
codes/dynamic/dynamic01/: CMakeLists.txt
codes/dynamic/dynamic02/: CMakeLists.txt
codes/dynamic/dynamic02/hellolib/: hello.h
codes/dynamic/dynamic03/: CMakeLists.txt
codes/dynamic/dynamic03/proj/: CMakeLists.txt
codes/static/static01/: CMakeLists.txt
codes/static/static02/: CMakeLists.txt
codes/static/static03/: CMakeLists.txt
codes/static/static03/proj/: CMakeLists.txt
codes/static/static04/proj/: CMakeLists.txt  proj1.cpp  proj2.cpp
codes/static/static05/: CMakeLists.txt
codes/static/static05/hellolib/: CMakeLists.txt  hello.cpp  hello.h
codes/static/static05/proj/: CMakeLists.txt  proj3.cpp
